--- a/_posts/0800-01-01-windows.html
+++ b/_posts/0800-01-01-windows.html
@@ -48,13 +48,11 @@ permalink: /windows
   }
 
 #bleed .heading {
-  background: url(/tilemill/assets/pages/tilemill_plus_windows.png) left no-repeat;)
-  text-align:left;
+  text-align:center;
   position: absolute;
-  text-indent: 170px;
-  right: 80px; 
-  top:430px;
-  width:640px;
+  top:420px;
+  width:740px;
+  left: 90px;
   color:#fff;
   }
 
@@ -80,28 +78,53 @@ input[type=text] {
   box-sizing:border-box;
   -moz-box-sizing:border-box;
   -webkit-box-sizing:border-box;
-  width:275px;
+  width:250px;
   }
 
 form .checkbox,
 form div.inline,
 form span.inline {
-  float:right;
-  margin-right:0px;
+  margin:0px auto;
   }
 
+input[type=submit],
+input[type=button],
 .button.small {
   height:30px;
   border:0px;
   padding:0px 20px;
   font-size:14px;
   line-height:30px;
+  background: #444;
+  box-shadow:inset #fff 0px 0px 0px 0px;
+  -moz-box-shadow:inset #fff 0px 0px 0px 0px;
+  -webkit-box-shadow:inset #fff 0px 0px 0px 0px;
   }
 
-.box .col-2 {
-  width:420px;
+input[type=button]:hover, .button.small:hover {
+  background: #222;
+}
+
+#mc_embed_signup {
+  margin-left: 260px;
+}
+   
+.insplash {
+  position: absolute;
+  top: 480px;
+  width: 920px;
+}
+
+.insplash p{
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 10px;
   }
-  
+
+#mce-EMAIL {
+  line-height: 10px;
+}  
+
 </style>
 
 <div id='bleed' class='mac'><div class='limiter'>
@@ -109,32 +132,17 @@ form span.inline {
     <iframe src="http://player.vimeo.com/video/34644668?title=0&amp;byline=0&amp;portrait=0&amp;color=ffffff" width="640" height="360" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
   </div>
   <div class='heading'>
-    <h1>TileMill for Windows</h1>
-    <h1>Coming January 2012</h1>
+    <h1>TileMill for Windows is Coming January 2012</h1>
   </div>
-</div></div>
-
-<div class='limiter clip'><div class='content prose'>
-
-<div class='clearfix'>
-  <p><big class='col-4'>
-  TileMill is an amazing open source map design studio from MapBox and it's coming to Windows in January. Whether you're a journalist, web designer, researcher,	 or seasoned cartographer, TileMill is the design studio you need to create compelling, interactive maps.</p></big>
-  </big></p>
-
-  <div class='col-4'>
-    <div class='box veryshort'>
-      <div class='col-2'>
-        <h3>Get notified</h3>
-        <p>Be the first to hear when TileMill for Windows is ready. You'll also receive updates about new features, events and tips from MapBox.</p>
-      </div>
+  <div class='col-4 insplash'>
+        <p>Subscribe to our newsletter and be the first to hear when it's ready.</p>
 
       <!-- Begin MailChimp Signup Form -->
       <div id="mc_embed_signup" class=''>
         <form action="http://mapbox.us2.list-manage1.com/subscribe/post?u=1b29ad842d113cece02035883&amp;id=6cbe531fd0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
         <div class="mc-field-group inline">
-          <label for="mce-EMAIL">Email address </label>
           <input type="hidden" value="1" name="group[7417][4]">
-          <input type="text" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+          <input type="text" value="" name="EMAIL" class="required email" placeholder="E-mail Address" id="mce-EMAIL">
           <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class='button small'>
         </div>
           <div id="mce-responses">
@@ -144,8 +152,16 @@ form span.inline {
         </form>
       </div>
       <!--End mc_embed_signup-->
-    </div>
   </div>
+
+</div></div>
+
+<div class='limiter clip'><div class='content prose'>
+
+<div class='clearfix'>
+  <p><big class='col-4'>
+  TileMill is an amazing open source map design studio from MapBox and it's coming to Windows in January. Whether you're a journalist, web designer, researcher,	 or seasoned cartographer, TileMill is the design studio you need to create compelling, interactive maps.</p></big>
+  </big></p>
 
 </div>
 
